restructured css code to be more readable and ensured that uneccessary code is removed

--- a/frontend/fanatii-football-x/src/Components/ArticlesPage/Articles.css
+++ b/frontend/fanatii-football-x/src/Components/ArticlesPage/Articles.css
@@ -1,13 +1,20 @@
+/*Global Keyframes*/
+@keyframes slideIn {
+    from{
+        opacity: 0;
+        transform: translateX(-100%);
+    }
+    to{
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
 .root-elem{
     background: #fff;
 }
 
-#article-main-heading{
-    text-align: center;
-    color: #fff;
-    padding: 1% 0;
-}
-
+/*Articles sections styles*/
 #Articles-main-container{
     background: #474bff;
     background: linear-gradient(79deg, #474bff 0%, #bc48ff 100%);
@@ -15,7 +22,7 @@
 }
 
 #Articles-section{
-    height: 40%;
+    height: 55%;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 1.5%;
@@ -24,11 +31,23 @@
     background: linear-gradient(79deg, #474bff 0%, #bc48ff 100%);
 }
 
-#all-articles{
-    width: 40%;
+.Article{
     height: 100%;
-    margin: 0 auto;
-    min-width: 250px;
+    background: #ffffff5c;
+    border-radius: 10px;
+    position: relative;
+    overflow: hidden;
+}
+
+@media screen and (max-width: 750px) {
+    #Articles-section{
+        height: 80%;
+    }
+
+    .Article{
+        min-height: 280px;
+        max-height: 300px;
+    }
 }
 
 .article-bannerImg-wrapper{
@@ -57,45 +76,12 @@
     color: white;
     background: #06065082;
     border-radius: 10px;
-}
-
-.article-summary-heading{
-    padding: 2% 10%;
+    padding-left: 5%;
 }
 
 .summary-animation{
     padding: 2% 10%;
     animation: slideIn 1s;
-}
-
-@keyframes slideIn {
-    from{
-        opacity: 0;
-        transform: translateX(-100%);
-    }
-    to{
-        opacity: 1;
-        transform: translateX(0);
-    }
-}
-
-
-.Article{
-    height: 100%;
-    background: #ffffff5c;
-    border-radius: 10px;
-    position: relative;
-    overflow: hidden;
-}
-
-@media screen and (max-width: 750px) {
-    #Articles-section{
-        height: 70%;
-    }
-
-    .Article{
-        max-height: 300px;
-    }
 }
 
 /*Podcast Section Styles*/
@@ -194,16 +180,12 @@
     color: #fff;
 }
 
-/*Responsive activity of BOTH Articles and Podcasts section*/
+/*Responsive activity of Podcasts section*/
 @media screen and (max-width: 500px) {
     .sub-top-main-podcasts{
         max-height: none;
         grid-template-columns: none;
         grid-template-rows: 30% 25% 25% 25%;
-    }
-
-    #host-line-break{
-        display: none;
     }
 }
 
